Revision history for DBIx::Class

0.08122 2010-05-03 17:41 (UTC)
    * New Features
        - Add DBIx::Class::FilterColumn for non-ref filtering
        - ::Storage::DBI now correctly preserves a parent $dbh from
          terminating children, even during interpreter-global
          out-of-order destruction
        - dbicadmin supports an -I option with the same semantics as
          perl itself
        - InflateColumn::DateTime support for MSSQL via DBD::Sybase
        - Millisecond precision support for MSSQL datetimes for
          InflateColumn::DateTime
        - Oracle-specific hierarchical query syntax support:
          CONNECT BY (NOCYCLE) / START WITH / ORDER SIBLINGS BY
        - Support connecting using $ENV{DBI_DSN} and $ENV{DBI_DRIVER}
        - current_source_alias method on ResultSet objects to
          determine the alias to use in programatically assembled
          search()es (originally added in 0.08100 but unmentioned)
        - Rewrite/unification of all subselecting limit emulations
          (RNO, Top, RowNum) to be much more robust wrt complex joined
          resultsets
        - MSSQL limits now don't require nearly as many applications of
          the unsafe_subselect_ok attribute, due to optimized queries
        - Support for Generic Subquery limit "emulation" - awfully slow
          and inefficient but works on almost any db, and is preferred
          to software limit emulation
        - Sybase ASE driver now uses SET ROWCOUNT where possible, and
          Generic Subquery otherwise for limit support instead of always
          using software limit emulation
        - create_ddl_dir (and derivatives) now attempt to create the given
          $ddl_dir if it does not already exist
        - deployment_statements now automatically supplies the current RDBMS
          version to SQLT producer_args for MySQL, Pg, SQLite and Oracle

    * Fixes
        - Fix nasty potentially data-eating bug when deleting/updating